# test-pkg-pro

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/test_pkg_pro_extended/: __init__.py  algorithm.py
